--- a/css/master.css
+++ b/css/master.css
@@ -19,6 +19,8 @@ main:after {
   display: table;
   clear: both;
 }
+
+/* sezione principale */
 main {
   margin: 0.5% auto;
 }
@@ -51,6 +53,8 @@ main {
   height: 200px;
   background-color: pink;
 }
+
+/* footer */
 footer {
   /* debug */
   height: 100px;
